--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <a href="#">Resume</a>
             </div>
             <div class="images">
-                <img src="c:\Users\ADMIN\Downloads\kavii/bg.png" class="shape">
-                <img src="c:\Users\ADMIN\Downloads\kavii/window2.png" class="girl">
+                <img src="c:\Users\ADMIN\Documents\myportfolio\kavii/bg.png" class="shape">
+                <img src="c:\Users\ADMIN\Documents\myportfolio\kavii/window2.png" class="girl">
             </div>
          </div>
          </div>
